--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>jaydeblogs - About</title>
+<title>jaydeblogs – about</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -33,6 +33,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
@@ -77,35 +78,18 @@ ul.task-list li input[type="checkbox"] {
   <span class="navbar-toggler-icon"></span>
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav navbar-nav-scroll ms-auto">
+            <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./about.html" aria-current="page">
- <span class="menu-text">About</span></a>
+    <a class="nav-link" href="./index.html">
+ <span class="menu-text">Home</span></a>
   </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="https://github.com/jaydehomer"><i class="bi bi-github" role="img">
-</i> 
- <span class="menu-text"></span></a>
+  <li class="nav-item">
+    <a class="nav-link" href="./projects.html">
+ <span class="menu-text">Projects</span></a>
   </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="https://twitter.com/jaydehomer"><i class="bi bi-twitter" role="img">
-</i> 
- <span class="menu-text"></span></a>
-  </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="./LINK"><i class="bi bi-letterboxd" role="img">
-</i> 
- <span class="menu-text"></span></a>
-  </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="./LINK"><i class="bi bi-goodreads" role="img">
-</i> 
- <span class="menu-text"></span></a>
-  </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="./LINK"><i class="bi bi-linkedin" role="img">
-</i> 
- <span class="menu-text"></span></a>
+  <li class="nav-item">
+    <a class="nav-link" href="./zaya.html">
+ <span class="menu-text">Zaya</span></a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
@@ -119,76 +103,27 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     
 <!-- main -->
-<div class="quarto-about-jolla">
-  <img src="profile.png" class="about-image
-  round " style="height: 15em; width: 15em;">
- <header id="title-block-header" class="quarto-title-block default">
-<div class="quarto-title">
-<h1 class="title">About</h1>
-</div>
-<div class="quarto-title-meta">
-  </div>
-</header><main class="content" id="quarto-document-content">
-<section id="hello-there" class="level2">
-<h2 data-anchor-id="hello-there">Hello, there!</h2>
-<p>This is me learning how to write a blog using quarto, RStudio, and Github. Much of this was developed based on <a href="https://quarto.org/docs/websites/website-blog.html">this.</a></p>
-</section>
-<section id="about-me" class="level2">
-<h2 data-anchor-id="about-me">About me</h2>
-<p>I’m Jayde, a PhD candidate and data fellow at <a href="">Washington University in Saint Louis</a>. When I wear my PhD hat in the Reading and Language Lab, I’m advised by Rebecca Treiman, working closely with Brett Kessler, where we study (<em>very generally</em>) patterns in children and adults’ spelling. When I wear my data fellow hat, I explore the university’s usage of educational technologies with Sally Wu at the Center for Teaching and Learning.</p>
-<p>I use this site to communicate what I do for work and play, as well as share tools or tricks that some floundering R learner might stumble upon some day and find mildly helpful. If you’re that floundering R learner, don’t worry, we’ve all been there; you’ll get through this error just in time for a new one to yell at you.</p>
-<p>If you’re interested in more, please <strong>do</strong> hesitate to get in touch (unless you want to offer me a job, in which case, see <a href="CV">here</a> and <a href="Contact">here</a>). I’m probably busy being overcommitted to things and really just wanting to read novels and catch up on Oscar nominations.</p>
-</section>
+<main class="content" id="quarto-document-content">
+
+
+
+<p>putting random stuff here</p>
 <section id="ideas" class="level2">
-<h2 data-anchor-id="ideas">Ideas</h2>
+<h2 class="anchored" data-anchor-id="ideas">Ideas</h2>
 <p>Here are some of my ideas:</p>
 <ul>
 <li>using APIs</li>
 <li>goodreads analyses</li>
 <li>spotify analyses</li>
 <li>twitter + letterboxd + rotten tomatoes analyses</li>
-<li>pages I want to make:
-<ul>
-<li>CV</li>
-<li>posts</li>
-<li>presentations</li>
-<li>projects</li>
-<li>contact</li>
-</ul></li>
 </ul>
-</section>
-<section id="why-am-i-doing-this" class="level2">
-<h2 data-anchor-id="why-am-i-doing-this">Why am I doing this?</h2>
-<p>While I should probably be walking my dog or writing my dissertation (don’t tell Becky!), someone at a conference recommended I do because when they hire data scientists, they like to see that applicants have blogs. Is that not a good enough reason? Also it could be fun for me.</p>
+<p>add CV/resume</p>
+<p>add</p>
 
 
 </section>
-</main> 
-  <hr class="about-sep">
-   <div class="about-links">
-  <a href="https://linkedin.com/in/jayde-homer" class="about-link">
-    <i class="bi bi-linkedin"></i>
-     <span class="about-link-text">LinkedIn</span>
-  </a>
-  <a href="https://github.com/jaydehomer" class="about-link">
-    <i class="bi bi-github"></i>
-     <span class="about-link-text">Github</span>
-  </a>
-  <a href="https://goodreads.com/jaydereadsalot" class="about-link">
-    <i class="bi bi-book"></i>
-     <span class="about-link-text">Goodreads</span>
-  </a>
-  <a href="https://letterboxd.com/JaydeReads/" class="about-link">
-    <i class="bi bi-film"></i>
-     <span class="about-link-text">Letterboxd</span>
-  </a>
-  <a href="https://twitter.com/jaydehomer" class="about-link">
-    <i class="bi bi-twitter"></i>
-     <span class="about-link-text">Twitter</span>
-  </a>
-</div>
-</div>
- <!-- /main -->
+
+</main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
@@ -209,6 +144,13 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     }
   }
   toggleBodyColorPrimary();  
+  const icon = "";
+  const anchorJS = new window.AnchorJS();
+  anchorJS.options = {
+    placement: 'right',
+    icon: icon
+  };
+  anchorJS.add('.anchored');
   const clipboard = new window.ClipboardJS('.code-copy-button', {
     target: function(trigger) {
       return trigger.previousElementSibling;
