--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content column-page" id="quarto-document-content">
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="0">
+<meta http-equiv="pragma" content="no-cache">
 <p>Hi, my name is Jayde. I have always loved consuming stories and solving puzzles. Unfortunately, neither of those pay the bills. Unless…</p>
 <p><em>data is the puzzle and I tell its story.</em></p>
 <section id="current-projects" class="level2">
